tests/baselines/reference/parserModuleDeclaration3.errors.txt
parserModuleDeclaration3.ts(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
parserModuleDeclaration3.ts(2,3): error TS1038: A 'declare' modifier cannot be used in an already ambient context.
parserModuleDeclaration3.ts(2,18): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== parserModuleDeclaration3.ts (3 errors) ====
    declare module M {
                   ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      declare module M2 {
      ~~~~~~~
!!! error TS1038: A 'declare' modifier cannot be used in an already ambient context.
                     ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
      }
    }